--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
 EditorStartupMap=None
-GameInstanceClass=/Script/Lecture.Lecture9_Delegate
+GameInstanceClass=/Script/Lecture.Lecture10_UCL
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
