강의 15-1: 메인 프로젝트에 직접 모듈 추가해보기

--- a/Lecture.uproject
+++ b/Lecture.uproject
@@ -12,6 +12,14 @@
 				"Engine",
 				"CoreUObject"
 			]
+		},
+		{
+			"Name": "ModuleExample",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject"
+			]
 		}
 	],
 	"Plugins": [
