--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
 EditorStartupMap=None
-GameInstanceClass=/Script/Lecture.Lecture14_UPackage
+GameInstanceClass=/Script/Lecture.Lecture15_Module_Plugin_Build
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
